compiler/tests/ui/fail/foo_fn_more.rs
#[compiler::item("foo_fn")]
fn foo(_: u8, _: u8) {}

fn main() {}
