compiler/tests/ui/fail/foo_fn_more.stderr
error: `foo_fn` item expected to have 1 arguments but the definition has 2 arguments
        please force the function to have 1 arguments
 --> tests/ui/fail/foo_fn_more.rs:2:1
  |
2 | fn foo(_: u8, _: u8) {}
  | ^^^^^^^^^^^^^^^^^^^^
